--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -19,8 +19,9 @@
 
 }
 .contact-col h3 img{
-    width: 35px;
+    width: 28px;
     margin-right: 10px;
+    margin-left: 10px;
 }
 .contact-col p{
     max-width: 450px;
