--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a{
 /* -----Media Query------- */
 @media (max-width: 1100px) {
   .container{
-    padding: 0 5%;
+    padding: 6px 5%;
   }
   .btn{
     padding: 14px 22px;
